# type.rs

./: .gitignore  Cargo.toml  README.md  todo
src/: canvas.rs  formulas.rs  main.rs
src/lib/: english.txt
