[package]
name = "type_rs"
version = "0.1.0"
authors = ["Enayaaa <enayathushmand12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
pancurses = { version = "0.16.1", features = ["wide"] }
textwrap = { version = "0.14.0", default-features = false, features = ["unicode-width","smawk"] }
textplots = "0.6.0"
rand = "0.8.4"
